// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/grid/demo/basic.md correctly 1`] = `
<div>
  <div class="gov-row">
    <div class="gov-col-12">col-12</div>
    <div class="gov-col-12">col-12</div>
  </div>
  <div class="gov-row">
    <div class="gov-col-8">col-8</div>
    <div class="gov-col-8">col-8</div>
    <div class="gov-col-8">col-8</div>
  </div>
  <div class="gov-row">
    <div class="gov-col-6">col-6</div>
    <div class="gov-col-6">col-6</div>
    <div class="gov-col-6">col-6</div>
    <div class="gov-col-6">col-6</div>
  </div>
</div>
`;

exports[`renders ./components/grid/demo/flex.md correctly 1`] = `
<div>
  <p>sub-element align left</p>
  <div class="gov-row-flex gov-row-flex-start">
    <div class="gov-col-4">col-4</div>
    <div class="gov-col-4">col-4</div>
    <div class="gov-col-4">col-4</div>
    <div class="gov-col-4">col-4</div>
  </div>
  <p>sub-element align center</p>
  <div class="gov-row-flex gov-row-flex-center">
    <div class="gov-col-4">col-4</div>
    <div class="gov-col-4">col-4</div>
    <div class="gov-col-4">col-4</div>
    <div class="gov-col-4">col-4</div>
  </div>
  <p>sub-element align right</p>
  <div class="gov-row-flex gov-row-flex-end">
    <div class="gov-col-4">col-4</div>
    <div class="gov-col-4">col-4</div>
    <div class="gov-col-4">col-4</div>
    <div class="gov-col-4">col-4</div>
  </div>
  <p>sub-element monospaced arrangement</p>
  <div class="gov-row-flex gov-row-flex-space-between">
    <div class="gov-col-4">col-4</div>
    <div class="gov-col-4">col-4</div>
    <div class="gov-col-4">col-4</div>
    <div class="gov-col-4">col-4</div>
  </div>
  <p>sub-element align full</p>
  <div class="gov-row-flex gov-row-flex-space-around">
    <div class="gov-col-4">col-4</div>
    <div class="gov-col-4">col-4</div>
    <div class="gov-col-4">col-4</div>
    <div class="gov-col-4">col-4</div>
  </div>
</div>
`;

exports[`renders ./components/grid/demo/flex-align.md correctly 1`] = `
<div>
  <p>Align Top</p>
  <div class="gov-row-flex gov-row-flex-center gov-row-flex-top">
    <div class="gov-col-4">
      <p class="height-100">col-4</p>
    </div>
    <div class="gov-col-4">
      <p class="height-50">col-4</p>
    </div>
    <div class="gov-col-4">
      <p class="height-120">col-4</p>
    </div>
    <div class="gov-col-4">
      <p class="height-80">col-4</p>
    </div>
  </div>
  <p>Align Center</p>
  <div class="gov-row-flex gov-row-flex-space-around gov-row-flex-middle">
    <div class="gov-col-4">
      <p class="height-100">col-4</p>
    </div>
    <div class="gov-col-4">
      <p class="height-50">col-4</p>
    </div>
    <div class="gov-col-4">
      <p class="height-120">col-4</p>
    </div>
    <div class="gov-col-4">
      <p class="height-80">col-4</p>
    </div>
  </div>
  <p>Align Bottom</p>
  <div class="gov-row-flex gov-row-flex-space-between gov-row-flex-bottom">
    <div class="gov-col-4">
      <p class="height-100">col-4</p>
    </div>
    <div class="gov-col-4">
      <p class="height-50">col-4</p>
    </div>
    <div class="gov-col-4">
      <p class="height-120">col-4</p>
    </div>
    <div class="gov-col-4">
      <p class="height-80">col-4</p>
    </div>
  </div>
</div>
`;

exports[`renders ./components/grid/demo/flex-order.md correctly 1`] = `
<div>
  <div class="gov-row-flex">
    <div class="gov-col-6 gov-col-order-4">1 col-order-4</div>
    <div class="gov-col-6 gov-col-order-3">2 col-order-3</div>
    <div class="gov-col-6 gov-col-order-2">3 col-order-2</div>
    <div class="gov-col-6 gov-col-order-1">4 col-order-1</div>
  </div>
</div>
`;

exports[`renders ./components/grid/demo/gutter.md correctly 1`] = `
<div class="gutter-example">
  <div class="gov-row" style="margin-left: -8px; margin-right: -8px;">
    <div class="gutter-row gov-col-6" style="padding-left: 8px; padding-right: 8px;">
      <div class="gutter-box">col-6</div>
    </div>
    <div class="gutter-row gov-col-6" style="padding-left: 8px; padding-right: 8px;">
      <div class="gutter-box">col-6</div>
    </div>
    <div class="gutter-row gov-col-6" style="padding-left: 8px; padding-right: 8px;">
      <div class="gutter-box">col-6</div>
    </div>
    <div class="gutter-row gov-col-6" style="padding-left: 8px; padding-right: 8px;">
      <div class="gutter-box">col-6</div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/grid/demo/offset.md correctly 1`] = `
<div>
  <div class="gov-row">
    <div class="gov-col-8">col-8</div>
    <div class="gov-col-8 gov-col-offset-8">col-8</div>
  </div>
  <div class="gov-row">
    <div class="gov-col-6 gov-col-offset-6">col-6 col-offset-6</div>
    <div class="gov-col-6 gov-col-offset-6">col-6 col-offset-6</div>
  </div>
  <div class="gov-row">
    <div class="gov-col-12 gov-col-offset-6">col-12 col-offset-6</div>
  </div>
</div>
`;

exports[`renders ./components/grid/demo/playfround.md correctly 1`] = `
<div id="components-grid-demo-playground">
  <div style="margin-bottom: 16px;"><span style="margin-right: 6px;">Gutter (px): </span>
    <div style="width: 50%;">
      <div tabindex="-1" class="gov-slider gov-slider-with-marks">
        <div class="gov-slider-rail"></div>
        <div class="gov-slider-track" style="left: 0%; width: 20%;"></div>
        <div class="gov-slider-step"><span class="gov-slider-dot gov-slider-dot-active" style="left: 0%;"></span><span class="gov-slider-dot gov-slider-dot-active" style="left: 20%;"></span><span class="gov-slider-dot" style="left: 40%;"></span><span class="gov-slider-dot" style="left: 60%;"></span><span class="gov-slider-dot" style="left: 80%;"></span><span class="gov-slider-dot" style="left: 100%;"></span></div>
        <div role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="5" aria-valuenow="1" class="gov-slider-handle" style="left: 20%;"></div>
        <div class="gov-slider-mark"><span class="gov-slider-mark-text gov-slider-mark-text-active" style="width: 18%; margin-left: -9%; left: 0%;">8</span><span class="gov-slider-mark-text gov-slider-mark-text-active" style="width: 18%; margin-left: -9%; left: 20%;">16</span><span class="gov-slider-mark-text" style="width: 18%; margin-left: -9%; left: 40%;">24</span><span class="gov-slider-mark-text" style="width: 18%; margin-left: -9%; left: 60%;">32</span><span class="gov-slider-mark-text" style="width: 18%; margin-left: -9%; left: 80%;">40</span><span class="gov-slider-mark-text" style="width: 18%; margin-left: -9%; left: 100%;">48</span></div>
      </div>
    </div> <span style="margin-right: 6px;">Column Count:</span>
    <div style="width: 50%;">
      <div tabindex="-1" class="gov-slider gov-slider-with-marks">
        <div class="gov-slider-rail"></div>
        <div class="gov-slider-track" style="left: 0%; width: 40%;"></div>
        <div class="gov-slider-step"><span class="gov-slider-dot gov-slider-dot-active" style="left: 0%;"></span><span class="gov-slider-dot gov-slider-dot-active" style="left: 20%;"></span><span class="gov-slider-dot gov-slider-dot-active" style="left: 40%;"></span><span class="gov-slider-dot" style="left: 60%;"></span><span class="gov-slider-dot" style="left: 80%;"></span><span class="gov-slider-dot" style="left: 100%;"></span></div>
        <div role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="5" aria-valuenow="2" class="gov-slider-handle" style="left: 40%;"></div>
        <div class="gov-slider-mark"><span class="gov-slider-mark-text gov-slider-mark-text-active" style="width: 18%; margin-left: -9%; left: 0%;">2</span><span class="gov-slider-mark-text gov-slider-mark-text-active" style="width: 18%; margin-left: -9%; left: 20%;">3</span><span class="gov-slider-mark-text gov-slider-mark-text-active" style="width: 18%; margin-left: -9%; left: 40%;">4</span><span class="gov-slider-mark-text" style="width: 18%; margin-left: -9%; left: 60%;">6</span><span class="gov-slider-mark-text" style="width: 18%; margin-left: -9%; left: 80%;">8</span><span class="gov-slider-mark-text" style="width: 18%; margin-left: -9%; left: 100%;">12</span></div>
      </div>
    </div>
  </div>
  <div class="gov-row" style="margin-left: -8px; margin-right: -8px;">
    <div class="gov-col-6" style="padding-left: 8px; padding-right: 8px;">
      <div>Column</div>
    </div>
    <div class="gov-col-6" style="padding-left: 8px; padding-right: 8px;">
      <div>Column</div>
    </div>
    <div class="gov-col-6" style="padding-left: 8px; padding-right: 8px;">
      <div>Column</div>
    </div>
    <div class="gov-col-6" style="padding-left: 8px; padding-right: 8px;">
      <div>Column</div>
    </div>
  </div> <pre>&lt;Row :gutter="16"&gt;
  &lt;Col :span="6"/&gt;
  &lt;Col :span="6"/&gt;
  &lt;Col :span="6"/&gt;
  &lt;Col :span="6"/&gt;
&lt;/Row&gt;</pre>
</div>
`;

exports[`renders ./components/grid/demo/responsive.md correctly 1`] = `
<div class="gov-row">
  <div class="gov-col-xs-2 gov-col-sm-4 gov-col-md-6 gov-col-lg-8 gov-col-xl-10">Col</div>
  <div class="gov-col-xs-20 gov-col-sm-16 gov-col-md-12 gov-col-lg-8 gov-col-xl-4">Col</div>
  <div class="gov-col-xs-2 gov-col-sm-4 gov-col-md-6 gov-col-lg-8 gov-col-xl-10">Col</div>
</div>
`;

exports[`renders ./components/grid/demo/responsive-more.md correctly 1`] = `
<div class="gov-row">
  <div class="gov-col-xs-5 gov-col-xs-offset-1 gov-col-lg-6 gov-col-lg-offset-2">Col</div>
  <div class="gov-col-xs-11 gov-col-xs-offset-1 gov-col-lg-6 gov-col-lg-offset-2">Col</div>
  <div class="gov-col-xs-5 gov-col-xs-offset-1 gov-col-lg-6 gov-col-lg-offset-2">Col</div>
</div>
`;

exports[`renders ./components/grid/demo/sort.md correctly 1`] = `
<div>
  <div class="gov-row">
    <div class="gov-col-18 gov-col-push-6">col-18 col-push-6</div>
    <div class="gov-col-6 gov-col-pull-18">col-6 col-pull-18</div>
  </div>
</div>
`;
